Thu Oct 18 18:23:20 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * MPC/config/iccm_tcpip_svnt.mpb:

          Be sure to link the TCPIP stub implementation library
          for all TCPIP servants.

        * tests/iccm/compiler/opensplice/Smoke_Test.mpc:
        * tests/iccm/compiler/rtidds/Smoke_Test.mpc:
        * tests/iccm/compiler/tao/Smoke_Test.mpc:
        * tests/iccm/compiler/tcpip/Smoke_Test.mpc:

          Changed exe names to prevent overwritting them on win32

        * tests/iccm/compiler/opensplice/driver.cpp:
        * tests/iccm/compiler/rtidds/driver.cpp:
        * tests/iccm/compiler/tao/driver.cpp:
        * tests/iccm/compiler/tcpip/driver.cpp:

          Fixed main signature to resolve linker errors on win32

Thu Oct 18 15:26:05 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/rtidds/compiler/Downcall_Event.cpp:
        * cuts/iccm/arch/rtidds/compiler/Upcall_Event.cpp:

          Added support for IDL enums and structs

        * tests/iccm/compiler/rtidds:
        * tests/iccm/compiler/rtidds/Smoke_Test.idl:
        * tests/iccm/compiler/rtidds/Smoke_Test.mpc:
        * tests/iccm/compiler/rtidds/Smoke_Test_Components.idl:
        * tests/iccm/compiler/rtidds/driver.cpp:

          Created smoke test for rtidds iccm compiler

Thu Oct 18 14:38:24 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Publisher_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.cpp:

          Fixed compilation errors on linux.  Templated HANDLE_NIL methods
          are now used when using the DDS writers.

Wed Oct 17 16:04:42 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/rtidds/compiler/Event_Traits.cpp:
        * cuts/iccm/arch/rtidds/servant/RTIDDS_EventConsumer_T.h:
        * cuts/iccm/arch/rtidds/servant/RTIDDS_EventConsumer_T.inl:
        * cuts/iccm/arch/rtidds/servant/RTIDDS_Servant_T.inl:
